<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/row_movie"
    android:layout_height="120dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/row_movie_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/row_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/titillium_web_bold"
                    android:lines="1"
                    android:text="@string/row_movie_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/row_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/titillium_web_regular"
                    android:text="@string/row_movie_date"
                    android:textColor="@color/black_50"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/row_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/titillium_web_regular"
                    android:text="@string/row_movie_type"
                    android:textColor="@color/black_50"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/row_movie_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:padding="7dp"
                android:gravity="center"
                android:background="@drawable/light_wight_round_bg"
                android:fontFamily="@font/titillium_web_bold"
                android:text="@string/row_movie_book_bt"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/tv_rect_border" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>