<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.movie.fragments.MovieDetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.movie.fragments.MovieDetailFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/movie_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:iss_auto_cycle="true"
                app:iss_period="1000"
                app:iss_delay="0"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminateTint="@color/black"
                android:visibility="gone"
                android:elevation="10dp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/movie_detail_content_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="1"
                android:ellipsize="end"
                android:fontFamily="@font/titillium_web_bold"
                android:text="@string/movie_detail_title"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/movie_watch_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/titillium_web_bold"
                android:text="@string/movie_detail_trailer"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="1"
                android:ellipsize="end"
                android:fontFamily="@font/titillium_web_bold"
                android:text="@string/movie_detail_genre"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="1"
                android:ellipsize="end"
                android:fontFamily="@font/titillium_web_regular"
                android:text=""
                android:textColor="@color/black_50"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="1"
                android:ellipsize="end"
                android:fontFamily="@font/titillium_web_bold"
                android:text="@string/movie_detail_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="1"
                android:ellipsize="end"
                android:fontFamily="@font/titillium_web_regular"
                android:text=""
                android:textColor="@color/black_50"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="1"
                android:ellipsize="end"
                android:fontFamily="@font/titillium_web_bold"
                android:text="@string/movie_detail_overview"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/titillium_web_regular"
                android:lines="5"
                android:ellipsize="end"
                android:text=""
                android:textColor="@color/black_50"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>